# iot-venture-f25-the-circuiteers

./: .gitignore  DOCKER_README.md  Dockerfile  README.md  compose.yaml  conflict_test.txt  test_scenarios.md  west.yml
adxl345_nucleo_wl55jc/: CMakeLists.txt  README.md  prj.conf
apps/: CMakeLists.txt  prj.conf
bme280/: arduino_i2c.overlay  prj.conf
bme280/tests/BME_UNIT_TEST/: CMakeLists.txt  prj.conf  testcase.yaml
bme280/tests/BME_UNIT_TEST/.cache/clangd/index/: test_bme280.c.E8FAF6F59EC243DB.idx
bme280/tests/BME_UNIT_TEST/src/: test_bme280.c
bme280/tests/BME_UNIT_TEST/twister-out/: testplan.json  twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
bme280_nucleo_wl55jc/: CMakeLists.txt  prj.conf
boot_with_keys/: VERSION  app.overlay  prj.conf  sample.yaml  sysbuild.conf
docs/: _config.yml  index.md
fuota/: pm_static.yml  private_key.pem  prj.conf  sysbuild.conf
fuota_with_sensor/: CMakeLists.txt  MODIFICATION_SUMMARY.md  pm_static.yml  prj.conf  sysbuild.conf
fuota_with_sensor_backup/: prj.conf
hooks/: README.md  TEST_RESULTS.md  install.sh  pre-commit  pre-push  test_hooks.sh
scratch_test/: prj.conf
sensors_test/: CMakeLists.txt  MOCK_TESTS_GUIDE.md  MOCK_TESTS_SUMMARY.md  SETUP_GUIDE.md  prj.conf
sensors_test/tests_unit_mock/: CMakeLists.txt
sensors_test/tests_unit_mock/include/: mock_sensor.h
sensors_test/tests_unit_mock/unit/: mock_sensor.c  test_adxl345_mock.c  test_bme280_mock.c
test_image/: CMakeLists.txt  app.overlay  prj.conf  sample.yaml  sysbuild.conf
uart_boot/: CmakeLists.txt  VERSION  app.overlay  (+2 more)
(+66 files in other folders)
